; ModuleID = '/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_srec2bin.c_binRecOutProgramStart.c'
source_filename = "/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_srec2bin.c_binRecOutProgramStart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AddressCurrent = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @binRecOutProgramStart(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @AddressCurrent, align 8
  %5 = add nsw i64 %4, 1
  %6 = icmp ne i64 %3, %5
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = call i32 (...) @binRecEnd()
  %9 = load i64, i64* %2, align 8
  %10 = call i32 @binRecStart(i64 %9)
  br label %11

11:                                               ; preds = %7, %1
  %12 = load i64, i64* %2, align 8
  store i64 %12, i64* @AddressCurrent, align 8
  ret void
}

declare dso_local i32 @binRecEnd(...) #1

declare dso_local i32 @binRecStart(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
